# Core

./: .gitignore  Benchmark.h  CMakeLists.txt  DateTime.h  DateTime_tests.h  Delay.h  EULA  FlankDetector.h  FolderHelper.h  Histogram.h  Histogram_tests.h  MachineLearning.h  MachineLearning_tests.h  MarkovChain.h  Math.h  Mtx2.h  OneShot.h  Physics.h  README.md  RELEASE_NOTES.md  Rand.h  StlUtils.h  StringBox.h  StringHelper.h  System.h  TextBox.h  TextIO.h  Timer.h  Utils.h  Uuid.h  Vec2.h  bool_vector.h  build.bat  build.sh  forge.recipe.toml  tag_release.sh
.github/workflows/: build-and-test-ubuntu.yml  build-macos.yml  build-windows.yml  release-linux.yml  release-macos.yml  release-windows.yml
Core Lib.xcodeproj/: project.pbxproj
Core.xcodeproj/: project.pbxproj
Examples/: Utf8_examples.h  build_examples.bat  build_examples.sh  examples.cpp
Examples/examples.vs/: examples.vs.vcxproj  examples.vs.vcxproj.filters
MachineLearning/: LeNet.h  MachineLearning.h  ann_cnn.h  ann_dense.h  ann_utils.h  utils.h
MachineLearning/MNIST/: MNIST_Loader.h
Tests/: Benchmark_tests.h  DateTime_tests.h  FlankDetector_tests.h  Histogram_tests.h  MachineLearning_tests.h  Math_tests.h  StringHelper_tests.h  Utf8_tests.h  build_unit_tests.bat  build_unit_tests.sh  unit_tests.cpp
Tests/unit_tests.vs/: unit_tests.vs.sln  unit_tests.vs.vcxproj
boxes/: Core-1.4.0+build.7-ho.cbox  Core-1.4.0+build.7-ho.cbox.sha256
include/Core/: Benchmark.h  DateTime.h  Delay.h  FlankDetector.h  FolderHelper.h  Histogram.h  Keyboard.h  MarkovChain.h  Math.h  MathUtils.h  Mtx2.h  OneShot.h  (+15 more)
(+5 files in other folders)
